update title banner

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -9,7 +9,7 @@
     <meta name="generator" content="Jekyll v3.9.0" />
 
     <script type="application/ld+json">
-{"@type":"WebSite","headline":"Zero Knowledge Proofs","url":"","description":"UC Berkeley","name":"Zero Knowledge Proofs","@context":"https://schema.org"}</script>
+{"@type":"WebSite","headline":"Entrepreneurship In Web3","url":"","description":"UC Berkeley","name":"Entrepreneurship In Web3","@context":"https://schema.org"}</script>
     <!-- End Jekyll SEO tag -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
