--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <img width="240"
                 src="http://berkeley-defi.github.io/assets/UCBerkeley_wordmark_white.png">
         </p>
-        <h1 class="project-name">Entrepreneurship In Web3</h1>
+        <h1 class="project-name">Zero Knowledge Proofs</h1>
 
     </section>
 
