revert back to berkeley version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
                 src="http://berkeley-defi.github.io/assets/UCBerkeley_wordmark_white.png">
         </p>
         <h1 class="project-name">Zero Knowledge Proofs</h1>
-        <h2 class="project-tagline">MOOC</h2>
+        <!-- <h2 class="project-tagline">MOOC</h2> -->
 
     </section>
 
