--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,10 @@
     <!-- End Jekyll SEO tag -->
     
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Entrepreneurship In Web3 MOOC" />
+    <meta name="twitter:title" content="Zero Knowledge Proofs MOOC" />
     <meta name="twitter:description"
-        content="With any technology breakthrough comes great opportunities for entrepreneurship. Our goal in this course is to help students understand the new space of Web3 and learn the fundamentals of entrepreneurship in web3. Through the exposure to successful entrepreneurs, venture capitalists, as well as an overview of open challenges in the industry, we hope to equip students to understand the challenges and opportunities of building a startup in web3 and get hands-on experience through the course. " />
-    <meta name="twitter:image" content="https://rdi.berkeley.edu/entrepreneurship-in-web3/assets/twitter_card_web3.png" />
+        content="This class aims to bring together students and experts in academia and industry to explore Zero-Knowledge Proofs (ZKP)." />
+    <meta name="twitter:image" content="https://rdi.berkeley.edu/zkp-course-mooc/assets/twitter_card_web3.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
