--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
         <p align="center">
             <img width="240"
-                src="http://berkeley-defi.github.io/assets/UCBerkeley_wordmark_white.png">
+                alt="UC Berkeley Wordmark White" src="http://berkeley-defi.github.io/assets/UCBerkeley_wordmark_white.png">
         </p>
         <h1 class="project-name">Zero Knowledge Proofs</h1>
         <!-- <h2 class="project-tagline">MOOC</h2> -->
